--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             type="text/css"
             href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
         />
-        <title>Vite App</title>
+        <title>HBO ⚡ Holtara Back Office 🤘</title>
     </head>
     <body>
         <div id="app"></div>
